--- a/components/JokeComponent.html
+++ b/components/JokeComponent.html
@@ -1,7 +1,24 @@
 <h2>List of jokes</h2>
 
 <!-- Get a joke button -->
+<button class="btn btn-success" ng-click="$ctrl.getAJoke()">
+    <i class="fa fa-plus"></i>
+    Add joke
+</button>
 <!-- Clear all button -->
 <!-- Error display -->
+<label class="text-danger">{{err}}</label>
 
 <!-- Table for jokes -->
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>Joke text</th>
+        <th>Flags</th>
+    </tr>
+    <tr ng-repeat="joke in jokes">
+        <td>{{joke.id}}</td>
+        <td>{{joke.joke}}</td>
+        <td>{{joke.isNerdy}}</td>
+    </tr>
+</table>
