feat(lab-10): final state

--- a/components/NavComponent.html
+++ b/components/NavComponent.html
@@ -16,6 +16,7 @@
 			<ul class="nav navbar-nav">
 				<li ng-class="{ 'active': isActive(['Welcome']) }"><a href="#" ng-link="['Welcome']">Welcome</span></a></li>
 				<li ng-class="{ 'active': isActive(['Jokes']) }"><a href="#" ng-link="['Jokes']">Jokes</span></a></li>
+				<li ng-class="{ 'active': isActive(['Chuck']) }"><a href="#" ng-link="['Chuck']">Chuck</span></a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
