feat(components): line endings and comments

--- a/components/ChuckComponent.html
+++ b/components/ChuckComponent.html
@@ -14,6 +14,7 @@
 }
 </style>
 
+<h2>Chuck generator</h2>
 <!-- Inputs for selecting files -->
 <input id="chuck-bg-select" type="file" accept="image/*" style="display:none;" chuck-file-bind chuck-type="background"/>
 <input id="chuck-front-select" type="file" accept="image/*" style="display:none;" chuck-file-bind chuck-type="foreground"/>
