feat(pixi): prepare for lab13

--- a/components/NavComponent.html
+++ b/components/NavComponent.html
@@ -17,6 +17,7 @@
 				<li ng-class="{ 'active': isActive(['Welcome']) }"><a href="#" ng-link="['Welcome']">Welcome</span></a></li>
 				<li ng-class="{ 'active': isActive(['Jokes']) }"><a href="#" ng-link="['Jokes']">Jokes</span></a></li>
 				<li ng-class="{ 'active': isActive(['Chuck']) }"><a href="#" ng-link="['Chuck']">Chuck</span></a></li>
+				<li ng-class="{ 'active': isActive(['Game']) }"><a href="#" ng-link="['Game']">Game</span></a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
